--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "rxjs-tslint-rules": "^4.34.8",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
+    "tslint-consistent-codestyle": "^1.16.0",
     "typescript": "~4.1.5"
   }
 }
